Fix alignment

--- a/src/components/ui/FamilyIndividuals.scss
+++ b/src/components/ui/FamilyIndividuals.scss
@@ -3,8 +3,20 @@
 .family-individuals {
   .family-name {
     font-weight: bold;
-    margin-left: $legend-rectangle-width + 0.5rem;
-    margin-top: 1em;
+    margin-left: 0.5rem;
+
+    &-spacer {
+      width: $legend-rectangle-width;
+    }
+
+    &-container {
+      display: flex;
+      align-items: center;
+      gap: 0.5em;
+      margin-top: 1em;
+      margin-left: -1em;
+      padding-left: 0.5em;
+    }
   }
 
   .individual-list {
@@ -17,11 +29,5 @@
       display: flex;
       flex-direction: row;
     }
-  }
-
-  .familyname-container {
-    display: flex;
-    align-items: center;
-    gap: 0.5em;
   }
 }
