--- a/src/components/ui/Infobox.scss
+++ b/src/components/ui/Infobox.scss
@@ -11,7 +11,7 @@ $infobox-pointer-width: 1rem;
   margin-left: -$infobox-width - (2 * $infobox-padding) - $infobox-pointer-width;
   margin-top: -3.75rem;
   width: $infobox-width;
-  z-index: 1001;
+  z-index: 2001;
 
   &:after {
     content: "";
